--- a/ios/MainTab/MyInfo/MyInfoViewController.xib
+++ b/ios/MainTab/MyInfo/MyInfoViewController.xib
@@ -120,8 +120,8 @@
                                                 <constraint firstItem="Tjw-m4-rrR" firstAttribute="leading" secondItem="1hB-J8-Bbh" secondAttribute="leading" constant="32" id="ubj-Nb-hwp"/>
                                             </constraints>
                                         </view>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="조예은" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVq-AT-g9h">
-                                            <rect key="frame" x="15" y="112" width="45" height="20.5"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yeni" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uVq-AT-g9h">
+                                            <rect key="frame" x="15" y="112" width="32" height="20.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" red="0.32941433790000002" green="0.33340162039999999" blue="0.32941150670000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                             <nil key="highlightedColor"/>
